# GitGud

./: GitGud.opam  Makefile  README.md  dune-project  test.txt  utils
lib/: command.ml  dune  object.ml  repository.cmi  repository.cmo  repository.ml  util.cmi  util.cmo  util.ml
test/: dune
